Apply small code cleanups